[package]
name = "discord_plays"
version = "0.9.0"
authors = ["ColdCalzone <coldhotpocket1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend", "cache"]
version = "0.10.9"

[dependencies.tokio]
version = "1.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.rand]
version = "0.8.3"

[dependencies.enigo]
version = "0.0.14"