[package]
name = "discord_plays"
version = "1.2.0"
authors = ["ColdCalzone <coldhotpocket1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend", "cache"]
version = "0.10.9"

[dependencies.tokio]
version = "1.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.rand]
version = "0.8.3"

[dependencies.enigo]
version = "0.0.14"

[dependencies.serde_json]
version = "1.0.71"

[dependencies.serde]
version = "1.0.130"